# PyBits

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  MANIFEST.in  PLAN.md  README.md  pyproject.toml
.claude/: settings.local.json
.claude/skills/python-engineering/: SKILL.md
AIM/: README.md  cli.py
AIM/src/: __init__.py  cli_parser.py  indexer.py  output.py
ATP/: .gitignore  README.md  atp.py  cli.py
ATP/src/: __init__.py  atp.py  cli_parser.py
CLI-HELLO/: hello.py  hello_report.py
CTA/: README.md  cli.py
CTA/src/: __init__.py  cli_parser.py  converter.py
HELLO/: README.md  cli.py  hello.py  hello_report.py
HELLO/lib/: __init__.py  auth_checker.py  config_parser.py  logger.py  probe_builder.py  report.py  response_normalizer.py  schema.py  security.py  spinner.py  utils.py
HELLO/src/: __init__.py  auth_checker.py  cli_parser.py  cli_runtime.py  command_utils.py  config_parser.py  constants.py  hash_utils.py  hello.py  json_utils.py  logger.py  path_utils.py  probe_builder.py  probe_env.py  process.py  report.py  response_normalizer.py  security.py  spinner.py  text_utils.py  time_utils.py  utils.py
HELLO/tests/: codex_probe_env_check.py  report_render_check.py
PTM/: README.md  __init__.py  cli.py  core.py  utils.py
PTM/src/: __init__.py  api_client.py  cli_parser.py  config.py  constants.py  file_handler.py  models.py  output.py  pdf_validator.py  workflow.py
PTP/: README.md  cli.py
PTP/src/: __init__.py  cli_parser.py  converter.py  options.py
SKILLS/: .recent_installs.json  .repos.json  README.md  cli.py  setting.yaml
SKILLS/src/: __init__.py  __main__.py  cli.py  cli_parser.py  config.py  favorite.py  installer.py  models.py  persistence.py  project_root.py  recent.py  repository.py  settings.py  skill.py  utils.py
SKILLS/src/commands/: __init__.py  favorite.py  install.py  maintenance.py  recent.py  (+3 more)
SKILLS/tests/: test_utils.py
SWEEP/: README.md  cli.py  setting.yaml
SWEEP/src/: __init__.py  cache.py  candidate_rules.py  cli_parser.py  config.py  failure_handler.py  models.py  path_rules.py  planner.py  project_discovery.py  project_root.py  reporter.py  scanner.py  scope_scanner.py  trash_runner.py  unresolved_manifest.py
_shared/: __init__.py
_shared/tests/: atp_ptm_cta_behavior_check.py  basic_info_check.py  global_command_check.py  logging_path_check.py  skills_recent_install_check.py  sweep_behavior_check.py
_shared/utils/: __init__.py  logging.py  trash.py
(+12 files in other folders)
