[project]
name = "pybits"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "ruff>=0.15.12",
    "questionary>=2.0.0",
    "gitpython>=3.1.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "filelock>=3",
]
[project.optional-dependencies]
ptm = [
    "magic-pdf[full]>=1.3.12,<1.4",
    "doclayout-yolo==0.0.2b1",
    "modelscope>=1.32.0",
]

[project.scripts]
HELLO = "HELLO.cli:main"
SKILLS = "SKILLS.src.cli:main"
PTM = "PTM.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["HELLO*", "SKILLS*", "PTM*"]
exclude = ["SKILLS._repos_cache*"]
