[project]
name = "pybits"

version = "0.1.0"
description = "独立 Python 小工具集合"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "ruff>=0.15.12",
    "questionary>=2.0.0",
    "gitpython>=3.1.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "filelock>=3",
    "requests>=2.34.1",
]


[project.scripts]
HELLO = "HELLO.cli:main"
SKILLS = "SKILLS.cli:main"
PTM = "PTM.cli:main"
ATP = "ATP.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["HELLO*", "SKILLS*", "PTM*", "ATP*"]
exclude = ["SKILLS._repos_cache*"]
