[project]
name = "pybits"

version = "0.1.0"
description = "独立 Python 小工具集合"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
    "ruff>=0.15.12",
    "questionary>=2.0.0",
    "gitpython>=3.1.0",
    "pyyaml>=6.0.0",
    "rich>=13.0.0",
    "filelock>=3",
    "requests>=2.34.1",
    "pymupdf>=1.27.2.3",
]


[project.scripts]
HELLO = "HELLO.cli:main"
SKILLS = "SKILLS.cli:main"
PTM = "PTM.cli:main"
PTP = "PTP.cli:main"
ATP = "ATP.cli:main"
AIM = "AIM.cli:main"
CTA = "CTA.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "HELLO*",
    "SKILLS*",
    "PTM*",
    "PTP*",
    "ATP*",
    "AIM*",
    "CTA*",
    "_shared*",
]
exclude = ["SKILLS._repos_cache*"]
